--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ body.dark-theme section {
 
 <header>
   <h1>
-    <img src="https://via.placeholder.com/70" alt="Logo" class="logo" />
+    <img src="https://github.com/legaltvapp/tr/blob/main/icon.png" alt="Logo" class="logo" />
     Gelişmiş Uygulama
   </h1>
   <button id="themeToggle">Karanlık Tema</button>
@@ -247,9 +247,8 @@ body.dark-theme section {
     <h2>Görüntüler</h2>
   </div>
   <div class="images-container">
-    <img src="https://via.placeholder.com/300x200?text=Ekran+1" alt="Ekran Görüntüsü 1" />
-    <img src="https://via.placeholder.com/300x200?text=Ekran+2" alt="Ekran Görüntüsü 2" />
-    <img src="https://via.placeholder.com/300x200?text=Ekran+3" alt="Ekran Görüntüsü 3" />
+    <img src="https://github.com/legaltvapp/tr/blob/main/ss1.png" alt="Ekran Görüntüsü 1" />
+    <img src="https://github.com/legaltvapp/tr/blob/main/ss2.png" alt="Ekran Görüntüsü 2" />
   </div>
 </section>
 
