--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ body.dark-theme section {
 
 <header>
   <h1>
-    <img src="https://github.com/legaltvapp/tr/blob/main/icon.png" alt="Logo" class="logo" />
+    <img src="https://github.com/legaltvapp/tr/blob/main/icon.png?raw=true" alt="Logo" class="logo" />
     Gelişmiş Uygulama
   </h1>
   <button id="themeToggle">Karanlık Tema</button>
