--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Gelişmiş Uygulama Sitesi</title>
+<title>Legal TV</title>
 <style>
   /* Root variables for themes */
   :root {
@@ -234,7 +234,7 @@ body.dark-theme section {
 <header>
   <h1>
     <img src="https://github.com/legaltvapp/tr/blob/main/icon.png?raw=true" alt="Logo" class="logo" />
-    Gelişmiş Uygulama
+    Legal TV 1.1
   </h1>
   <button id="themeToggle">Karanlık Tema</button>
 </header>
@@ -247,8 +247,8 @@ body.dark-theme section {
     <h2>Görüntüler</h2>
   </div>
   <div class="images-container">
-    <img src="https://github.com/legaltvapp/tr/blob/main/ss1.png" alt="Ekran Görüntüsü 1" />
-    <img src="https://github.com/legaltvapp/tr/blob/main/ss2.png" alt="Ekran Görüntüsü 2" />
+    <img src="https://github.com/legaltvapp/tr/blob/main/ss1.png?raw=true" alt="Ekran Görüntüsü 1" />
+    <img src="https://github.com/legaltvapp/tr/blob/main/ss2.png?raw=true" alt="Ekran Görüntüsü 2" />
   </div>
 </section>
 
@@ -258,7 +258,7 @@ body.dark-theme section {
     <h2>Açıklama</h2>
   </div>
   <p>
-    Bu uygulamayı indirerek en güncel özelliklere ulaşabilir, hızlı ve güvenli kullanım sağlayabilirsiniz.
+    Legal TV kullanarak internet üzerinde ücretsiz yayınlanan yayınları sorunsuzca izleyebilirsiniz. Tüm içerik Free-To-Air mantığıyla yapılmaktadır. Tüm önerileriniz için uygulama içinden iletişime geçebilirsiniz. Aşağıdaki lintek son sürümü indirebilirsiniz.
   </p>
   <a href="#" class="btn download-btn" download>İndir</a>
 </section>
@@ -269,27 +269,19 @@ body.dark-theme section {
     <h2>Özellikler</h2>
   </div>
   <ul class="features-list">
-    <li>Hızlı ve stabil performans</li>
-    <li>Gelişmiş güvenlik</li>
-    <li>Kolay kullanım</li>
-    <li>Her cihazda uyumlu</li>
-    <li>Güncellemeler otomatik</li>
+    <li>Hızlı ve Güvenli</li>
+    <li>Kesintisiz Yayınlar</li>
+    <li>Reklamsız ve Ücretsiz</li>
+    <li>HD ve SD İzleme İmkanı</li>
+    <li>Sürekli Güncel</li>
   </ul>
-</section>
-
-<!-- Antivirus Result Button -->
-<section>
-  <div class="section-title">
-    <h2>Güvenlik Kontrolü</h2>
-  </div>
-  <button class="btn antivirus-btn" onclick="alert('Antivirus sonucu: Güvenli!')">Antivirus Sonucu</button>
 </section>
 
 </main>
 
 <!-- Footer -->
 <footer style="text-align:center; padding:1.5rem; background:#eee; margin-top:2rem;">
-  Tüm hakları saklıdır © 2025
+  Tüm hakları saklıdır © 2025 - ilovemelody
 </footer>
 
 <script>
