--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ body.dark-theme section {
   <p>
     Legal TV kullanarak internet üzerinde ücretsiz yayınlanan yayınları sorunsuzca izleyebilirsiniz. Tüm içerik Free-To-Air mantığıyla yapılmaktadır. Tüm önerileriniz için uygulama içinden iletişime geçebilirsiniz. Aşağıdaki lintek son sürümü indirebilirsiniz.
   </p>
-  <a href="https://upnow-prod.ff45e40d1a1c8f7e7de4e976d0c9e555.r2.cloudflarestorage.com/muw4gb2NokhPK0U4IcF7kaEBkME2/bdfc37af-7e8e-4eee-8a60-8f348ea9d0eb?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=cdd12e35bbd220303957dc5603a4cc8e%2F20250609%2Fauto%2Fs3%2Faws4_request&X-Amz-Date=20250609T195034Z&X-Amz-Expires=43200&X-Amz-Signature=37b2e5fb04ed5da0e501c7d1851e2516dfad63a78a91783dd79f0b57c22cfe97&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3D%22legalv1.apk%22" class="btn download-btn" download>İndir</a>
+  <a href="https://apk.e-droid.net/apk/app3593731-n31vp2.apk?v=5" class="btn download-btn" download>İndir</a>
 </section>
 
 <!-- Features -->
