--- a/index.html
+++ b/index.html
@@ -261,6 +261,8 @@ body.dark-theme section {
     Legal TV kullanarak internet üzerinde ücretsiz yayınlanan yayınları sorunsuzca izleyebilirsiniz. Tüm içerik Free-To-Air mantığıyla yapılmaktadır. Tüm önerileriniz için uygulama içinden iletişime geçebilirsiniz. Aşağıdaki lintek son sürümü indirebilirsiniz.
   </p>
   <a href="https://apk.e-droid.net/apk/app3593731-n31vp2.apk?v=5" class="btn download-btn" download>İndir</a>
+  <a href="https://apkpure.com/legal-tv/com.legaltv.org/downloading" class="btn download-btn" download>İndir 2</a>
+
 </section>
 
 <!-- Features -->
@@ -281,7 +283,8 @@ body.dark-theme section {
 
 <!-- Footer -->
 <footer style="text-align:center; padding:1.5rem; background:#eee; margin-top:2rem;">
-  Tüm hakları saklıdır © 2025 - ilovemelody
+  Tüm hakları saklıdır © 2025 
+
 </footer>
 
 <script>
