--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@ body.dark-theme section {
     Legal TV 1.1
   </h1>
   <button id="themeToggle">Karanlık Tema</button>
+    <button id="themeToggle">Chat 🗨️</button>
 </header>
 
 <main>
