--- a/index.html
+++ b/index.html
@@ -237,13 +237,10 @@ body.dark-theme section {
     Legal TV 1.1
   </h1>
   <button id="themeToggle">Karanlık Tema</button>
-    <button id="themeToggle">Chat 🗨️</button>
-</header>
 
 <main>
 
-<!-- Image Section -->
-<section>
+<!-- Image Sectionsection>
   <div class="section-title">
     <h2>Görüntüler</h2>
   </div>
